--- a/equipos/lasPalmas/asistencias.html
+++ b/equipos/lasPalmas/asistencias.html
@@ -360,10 +360,10 @@
 
 
                 divContenido.innerHTML = `
-        <label for="posicionJugador" class="form-label">Escribe la cantidad de amarillas</label>
+        <label for="posicionJugador" class="form-label">Escribe la cantidad de asistencias</label>
         <input type="text" class="form-control mb-3" id="cambiarAsistenciasNueva" style="width: 250px;" required>
 
-        <button type="submit" class="btn btn-primary">Cambiar amarillas</button>
+        <button type="submit" class="btn btn-primary">Cambiar asistencias</button>
         `;
 
                 formulario.appendChild(divContenido);
