--- a/equipos/osasuna/asistencias.html
+++ b/equipos/osasuna/asistencias.html
@@ -57,26 +57,6 @@
 
     <div class="container marketing">
 
-        <!-- ENTRENADOR -->
-        <h1 class="mt-5">ENTRENADOR</h1>
-        <hr>
-        <div class="row mt-5 d-flex justify-content-center">
-
-            <div class="col-lg-4 text-center">
-                <img class="rounded-circle" width="140" height="140" src="../../entrenadores/imgEntrenadores/entrenadorOsasuna.png">
-                </img>
-
-                <h2>Jaroba Arrasate</h2>
-                <h5>Entrenador</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar entrenador</button>
-            </div><!-- /.col-lg-4 -->
-
-
-
-
-        </div><!-- /.row -->
-
-
         <!-- PORTEROS -->
 
         <h1 class="mt-5">PORTEROS</h1>
@@ -90,7 +70,7 @@
 
                 <h2>Sergio Herrera</h2>
                 <h5>0 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/aitorFernandez.png">
@@ -98,7 +78,7 @@
 
                 <h2>Aitor Fernández</h2>
                 <h5>0 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -116,7 +96,7 @@
 
                 <h2>Juan Cruz</h2>
                 <h5>1 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/unaiGarcia.png">
@@ -124,7 +104,7 @@
 
                 <h2>Unai García</h2>
                 <h5>0 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/davidGarcia.png">
@@ -132,7 +112,7 @@
 
                 <h2>David García</h2>
                 <h5>2 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -147,7 +127,7 @@
 
                 <h2>Jesús Areso</h2>
                 <h5>0 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/rubenPeña.png">
@@ -155,7 +135,7 @@
 
                 <h2>Rubén Peña</h2>
                 <h5>4 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/johanMojica.png">
@@ -163,7 +143,7 @@
 
                 <h2>Johan Mojica</h2>
                 <h5>2 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -173,7 +153,7 @@
 
                 <h2>Alejandro Catena</h2>
                 <h5>0 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -183,7 +163,7 @@
 
                 <h2>Jorge Herrando</h2>
                 <h5>0 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -202,7 +182,7 @@
 
                 <h2>Lucas Torró</h2>
                 <h5>6 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/jonMoncayola.png">
@@ -210,7 +190,7 @@
 
                 <h2>Jon Moncayola</h2>
                 <h5>4 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/aimarOroz.png">
@@ -218,7 +198,7 @@
 
                 <h2>Aimar Oroz</h2>
                 <h5>7 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -233,7 +213,7 @@
 
                 <h2>Rubén García</h2>
                 <h5>1 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/moiGomez.png">
@@ -241,7 +221,7 @@
 
                 <h2>Moi Gómez</h2>
                 <h5>8 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/pabloIbañez.png">
@@ -249,7 +229,7 @@
 
                 <h2>Pablo Ibáñez</h2>
                 <h5>0 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/ikerMuñoz.png">
@@ -257,7 +237,7 @@
 
                 <h2>Iker Muñoz</h2>
                 <h5>1 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             
         </div><!-- /.row -->
@@ -277,7 +257,7 @@
 
                 <h2>Kike Barja</h2>
                 <h5>2 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/anteBudimir.png">
@@ -285,7 +265,7 @@
 
                 <h2>Ante Budimir</h2>
                 <h5>2 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/raulGarcia.png">
@@ -293,7 +273,7 @@
 
                 <h2>Raúl García</h2>
                 <h5>0 asistencias</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAsistencias">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -329,7 +309,7 @@
         document.addEventListener('DOMContentLoaded', function (e) {
 
 
-            const botonCambiarPartidos = document.querySelectorAll('.cambiarNumeroAmarillas');
+            const botonCambiarPartidos = document.querySelectorAll('.cambiarNumeroAsistencias');
 
             let formulario = document.getElementById('formulario');
 
@@ -348,10 +328,10 @@
 
 
                 divContenido.innerHTML = `
-        <label for="posicionJugador" class="form-label">Escribe la cantidad de amarillas</label>
-        <input type="text" class="form-control mb-3" id="cantidadPartidosNueva" style="width: 250px;" required>
+        <label for="posicionJugador" class="form-label">Escribe la cantidad de asistencias</label>
+        <input type="text" class="form-control mb-3" id="cantidadAsistenciasNueva" style="width: 250px;" required>
 
-        <button type="submit" class="btn btn-primary">Cambiar amarillas</button>
+        <button type="submit" class="btn btn-primary">Cambiar asistencias</button>
         `;
 
                 formulario.appendChild(divContenido);
@@ -359,12 +339,12 @@
                 let nuevosPartidos = e.target.parentNode.querySelector('h5');
                 let boton = formulario.querySelector('button');
 
-                boton.addEventListener('click', cambiarNumeroPartidos)
+                boton.addEventListener('click', cambiarNumeroAsistencias)
 
-                function cambiarNumeroPartidos(e){
-                    let numeroPartidosNuevo = formulario.querySelector('#cantidadPartidosNueva').value;
+                function cambiarNumeroAsistencias(e){
+                    let numeroPartidosNuevo = formulario.querySelector('#cantidadAsistenciasNueva').value;
                     nuevosPartidos.innerHTML = `
-                    ${numeroPartidosNuevo} amarillas
+                    ${numeroPartidosNuevo} asistencias
                     `
                 }
 
