--- a/equipos/osasuna/partidosJugados.html
+++ b/equipos/osasuna/partidosJugados.html
@@ -57,25 +57,6 @@
 
     <div class="container marketing">
 
-        <!-- ENTRENADOR -->
-        <h1 class="mt-5">ENTRENADOR</h1>
-        <hr>
-        <div class="row mt-5 d-flex justify-content-center">
-
-            <div class="col-lg-4 text-center">
-                <img class="rounded-circle" width="140" height="140" src="../../entrenadores/imgEntrenadores/entrenadorOsasuna.png">
-                </img>
-
-                <h2>Jaroba Arrasate</h2>
-                <h5>Entrenador</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar entrenador</button>
-            </div><!-- /.col-lg-4 -->
-
-
-
-
-        </div><!-- /.row -->
-
 
         <!-- PORTEROS -->
 
@@ -90,7 +71,7 @@
 
                 <h2>Sergio Herrera</h2>
                 <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/aitorFernandez.png">
@@ -98,7 +79,7 @@
 
                 <h2>Aitor Fernández</h2>
                 <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -116,7 +97,7 @@
 
                 <h2>Juan Cruz</h2>
                 <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/unaiGarcia.png">
@@ -124,7 +105,7 @@
 
                 <h2>Unai García</h2>
                 <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/davidGarcia.png">
@@ -132,7 +113,7 @@
 
                 <h2>David García</h2>
                 <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -147,7 +128,7 @@
 
                 <h2>Jesús Areso</h2>
                 <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/rubenPeña.png">
@@ -155,7 +136,7 @@
 
                 <h2>Rubén Peña</h2>
                 <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/johanMojica.png">
@@ -163,7 +144,7 @@
 
                 <h2>Johan Mojica</h2>
                 <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -173,7 +154,7 @@
 
                 <h2>Alejandro Catena</h2>
                 <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -183,7 +164,7 @@
 
                 <h2>Jorge Herrando</h2>
                 <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -202,7 +183,7 @@
 
                 <h2>Lucas Torró</h2>
                 <h5>Mediocentro defensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/jonMoncayola.png">
@@ -210,7 +191,7 @@
 
                 <h2>Jon Moncayola</h2>
                 <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/aimarOroz.png">
@@ -218,7 +199,7 @@
 
                 <h2>Aimar Oroz</h2>
                 <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -233,7 +214,7 @@
 
                 <h2>Rubén García</h2>
                 <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/moiGomez.png">
@@ -241,7 +222,7 @@
 
                 <h2>Moi Gómez</h2>
                 <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/pabloIbañez.png">
@@ -249,7 +230,7 @@
 
                 <h2>Pablo Ibáñez</h2>
                 <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/ikerMuñoz.png">
@@ -257,7 +238,7 @@
 
                 <h2>Iker Muñoz</h2>
                 <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             
         </div><!-- /.row -->
@@ -277,7 +258,7 @@
 
                 <h2>Kike Barja</h2>
                 <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/anteBudimir.png">
@@ -285,7 +266,7 @@
 
                 <h2>Ante Budimir</h2>
                 <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/osasuna/raulGarcia.png">
@@ -293,7 +274,7 @@
 
                 <h2>Raúl García</h2>
                 <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeropartidos">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -329,7 +310,7 @@
         document.addEventListener('DOMContentLoaded', function (e) {
 
 
-            const botonCambiarPartidos = document.querySelectorAll('.cambiarNumeroAmarillas');
+            const botonCambiarPartidos = document.querySelectorAll('.cambiarNumeropartidos');
 
             let formulario = document.getElementById('formulario');
 
@@ -345,13 +326,11 @@
                 const divContenido = document.createElement('div');
                 divContenido.className = 'mt-3 mb-3 container';
 
-
-
                 divContenido.innerHTML = `
-        <label for="posicionJugador" class="form-label">Escribe la cantidad de amarillas</label>
+        <label for="posicionJugador" class="form-label">Escribe la cantidad de partidos</label>
         <input type="text" class="form-control mb-3" id="cantidadPartidosNueva" style="width: 250px;" required>
 
-        <button type="submit" class="btn btn-primary">Cambiar amarillas</button>
+        <button type="submit" class="btn btn-primary">Cambiar partidos</button>
         `;
 
                 formulario.appendChild(divContenido);
@@ -364,7 +343,7 @@
                 function cambiarNumeroPartidos(e){
                     let numeroPartidosNuevo = formulario.querySelector('#cantidadPartidosNueva').value;
                     nuevosPartidos.innerHTML = `
-                    ${numeroPartidosNuevo} amarillas
+                    ${numeroPartidosNuevo} partidos
                     `
                 }
 
