--- a/equipos/rayo/rojas.html
+++ b/equipos/rayo/rojas.html
@@ -57,25 +57,6 @@
 
     <div class="container marketing">
 
-        <!-- ENTRENADOR -->
-        <h1 class="mt-5">ENTRENADOR</h1>
-        <hr>
-        <div class="row mt-5 d-flex justify-content-center">
-
-            <div class="col-lg-4 text-center">
-                <img class="rounded-circle" width="140" height="140" src="../../entrenadores/imgEntrenadores/entrenadorRayo.png">
-                </img>
-
-                <h2>Iñigo Perez</h2>
-                <h5>Entrenador</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar entrenador</button>
-            </div><!-- /.col-lg-4 -->
-
-
-
-
-        </div><!-- /.row -->
-
 
         <!-- PORTEROS -->
 
@@ -90,7 +71,7 @@
 
                 <h2>Stole Dimitrievski</h2>
                 <h5>1 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/daniCardenas.png">
@@ -98,7 +79,7 @@
 
                 <h2>Dani Cardenas</h2>
                 <h5>0 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -116,7 +97,7 @@
 
                 <h2>Pep Chavarría</h2>
                 <h5>1 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/martinPascual.png">
@@ -124,7 +105,7 @@
 
                 <h2>Martín Pascual</h2>
                 <h5>0 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/aridaneHernandez.png">
@@ -132,7 +113,7 @@
 
                 <h2>Aridane Hernández</h2>
                 <h5>3 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -147,7 +128,7 @@
 
                 <h2>Alfonso Espino</h2>
                 <h5>1 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/abdulMumin.png">
@@ -155,7 +136,7 @@
 
                 <h2>Abdul Mumin</h2>
                 <h5>3 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/ivanBalliu.png">
@@ -163,7 +144,7 @@
 
                 <h2>Iván Balliu</h2>
                 <h5>2 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -173,7 +154,7 @@
 
                 <h2>Florian Lejeune</h2>
                 <h5>4 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -192,7 +173,7 @@
 
                 <h2>José Pozo</h2>
                 <h5>2 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/isipalazon.png">
@@ -200,7 +181,7 @@
 
                 <h2>Isi Palazón</h2>
                 <h5>3 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/oscarTtrejo.png">
@@ -208,7 +189,7 @@
 
                 <h2>Óscar Trejo</h2>
                 <h5>4 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -223,7 +204,7 @@
 
                 <h2>Randy Nteka</h2>
                 <h5>1 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/kikePerez.png">
@@ -231,7 +212,7 @@
 
                 <h2>Kike Pérez</h2>
                 <h5>0 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/unaiLopez.png">
@@ -239,7 +220,7 @@
 
                 <h2>Unai López</h2>
                 <h5>2 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/alvaroGarcia.png">
@@ -247,7 +228,7 @@
 
                 <h2>Alvaro García</h2>
                 <h5>1 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -256,7 +237,7 @@
 
                 <h2>Pathé Ciss</h2>
                 <h5>0 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -265,7 +246,7 @@
 
                 <h2>Óscar Valentin</h2>
                 <h5>2 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             
         </div><!-- /.row -->
@@ -285,7 +266,7 @@
 
                 <h2>Radamel Falcao</h2>
                 <h5>0 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/bebe.png">
@@ -293,7 +274,7 @@
 
                 <h2>Bebé</h2>
                 <h5>0 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/jorgeDeFrutos.png">
@@ -301,7 +282,7 @@
 
                 <h2>Jorge de Frutos</h2>
                 <h5>1 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -316,7 +297,7 @@
 
                 <h2>Raúl de Tomas</h2>
                 <h5>6 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -325,7 +306,7 @@
 
                 <h2>Sergio Camello</h2>
                 <h5>1 rojas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroRojas">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
             
@@ -357,7 +338,7 @@
         document.addEventListener('DOMContentLoaded', function (e) {
 
 
-            const botonCambiarPartidos = document.querySelectorAll('.cambiarNumeroAmarillas');
+            const botonCambiarPartidos = document.querySelectorAll('.cambiarNumeroRojas');
 
             let formulario = document.getElementById('formulario');
 
@@ -377,9 +358,9 @@
 
                 divContenido.innerHTML = `
         <label for="posicionJugador" class="form-label">Escribe la cantidad de amarillas</label>
-        <input type="text" class="form-control mb-3" id="cantidadPartidosNueva" style="width: 250px;" required>
+        <input type="text" class="form-control mb-3" id="cantidadRojasNueva" style="width: 250px;" required>
 
-        <button type="submit" class="btn btn-primary">Cambiar amarillas</button>
+        <button type="submit" class="btn btn-primary">Cambiar rojas</button>
         `;
 
                 formulario.appendChild(divContenido);
@@ -387,12 +368,12 @@
                 let nuevosPartidos = e.target.parentNode.querySelector('h5');
                 let boton = formulario.querySelector('button');
 
-                boton.addEventListener('click', cambiarNumeroPartidos)
+                boton.addEventListener('click', cambiarNumeroRojas)
 
-                function cambiarNumeroPartidos(e){
-                    let numeroPartidosNuevo = formulario.querySelector('#cantidadPartidosNueva').value;
+                function cambiarNumeroRojas(e){
+                    let numeroPartidosNuevo = formulario.querySelector('#cantidadRojasNueva').value;
                     nuevosPartidos.innerHTML = `
-                    ${numeroPartidosNuevo} amarillas
+                    ${numeroPartidosNuevo} rojas
                     `
                 }
 
