--- a/equipos/rayo/temporadas.html
+++ b/equipos/rayo/temporadas.html
@@ -57,26 +57,6 @@
 
     <div class="container marketing">
 
-        <!-- ENTRENADOR -->
-        <h1 class="mt-5">ENTRENADOR</h1>
-        <hr>
-        <div class="row mt-5 d-flex justify-content-center">
-
-            <div class="col-lg-4 text-center">
-                <img class="rounded-circle" width="140" height="140" src="../../entrenadores/imgEntrenadores/entrenadorRayo.png">
-                </img>
-
-                <h2>Iñigo Perez</h2>
-                <h5>Entrenador</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar entrenador</button>
-            </div><!-- /.col-lg-4 -->
-
-
-
-
-        </div><!-- /.row -->
-
-
         <!-- PORTEROS -->
 
         <h1 class="mt-5">PORTEROS</h1>
@@ -90,7 +70,7 @@
 
                 <h2>Stole Dimitrievski</h2>
                 <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/daniCardenas.png">
@@ -98,7 +78,7 @@
 
                 <h2>Dani Cardenas</h2>
                 <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -116,7 +96,7 @@
 
                 <h2>Pep Chavarría</h2>
                 <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/martinPascual.png">
@@ -124,7 +104,7 @@
 
                 <h2>Martín Pascual</h2>
                 <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/aridaneHernandez.png">
@@ -132,7 +112,7 @@
 
                 <h2>Aridane Hernández</h2>
                 <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -147,7 +127,7 @@
 
                 <h2>Alfonso Espino</h2>
                 <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/abdulMumin.png">
@@ -155,7 +135,7 @@
 
                 <h2>Abdul Mumin</h2>
                 <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/ivanBalliu.png">
@@ -163,7 +143,7 @@
 
                 <h2>Iván Balliu</h2>
                 <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -173,7 +153,7 @@
 
                 <h2>Florian Lejeune</h2>
                 <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -192,7 +172,7 @@
 
                 <h2>José Pozo</h2>
                 <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/isipalazon.png">
@@ -200,7 +180,7 @@
 
                 <h2>Isi Palazón</h2>
                 <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/oscarTtrejo.png">
@@ -208,7 +188,7 @@
 
                 <h2>Óscar Trejo</h2>
                 <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -223,7 +203,7 @@
 
                 <h2>Randy Nteka</h2>
                 <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/kikePerez.png">
@@ -231,7 +211,7 @@
 
                 <h2>Kike Pérez</h2>
                 <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/unaiLopez.png">
@@ -239,7 +219,7 @@
 
                 <h2>Unai López</h2>
                 <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/alvaroGarcia.png">
@@ -247,7 +227,7 @@
 
                 <h2>Alvaro García</h2>
                 <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -256,7 +236,7 @@
 
                 <h2>Pathé Ciss</h2>
                 <h5>Mediocentro defensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -265,7 +245,7 @@
 
                 <h2>Óscar Valentin</h2>
                 <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
             
         </div><!-- /.row -->
@@ -285,7 +265,7 @@
 
                 <h2>Radamel Falcao</h2>
                 <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/bebe.png">
@@ -293,7 +273,7 @@
 
                 <h2>Bebé</h2>
                 <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/jorgeDeFrutos.png">
@@ -301,7 +281,7 @@
 
                 <h2>Jorge de Frutos</h2>
                 <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -316,7 +296,7 @@
 
                 <h2>Raúl de Tomas</h2>
                 <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -325,7 +305,7 @@
 
                 <h2>Sergio Camello</h2>
                 <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroTemporadas">Eliminar temporadas</button>
             </div><!-- /.col-lg-4 -->
 
             
@@ -357,7 +337,7 @@
         document.addEventListener('DOMContentLoaded', function (e) {
 
 
-            const botonCambiarPartidos = document.querySelectorAll('.cambiarNumeroAmarillas');
+            const botonCambiarPartidos = document.querySelectorAll('.cambiarNumeroTemporadas');
 
             let formulario = document.getElementById('formulario');
 
@@ -376,10 +356,10 @@
 
 
                 divContenido.innerHTML = `
-        <label for="posicionJugador" class="form-label">Escribe la cantidad de amarillas</label>
-        <input type="text" class="form-control mb-3" id="cantidadPartidosNueva" style="width: 250px;" required>
+        <label for="posicionJugador" class="form-label">Escribe la cantidad de temporadas</label>
+        <input type="text" class="form-control mb-3" id="cantidadTemporadasNueva" style="width: 250px;" required>
 
-        <button type="submit" class="btn btn-primary">Cambiar amarillas</button>
+        <button type="submit" class="btn btn-primary">Cambiar temporadas</button>
         `;
 
                 formulario.appendChild(divContenido);
@@ -390,9 +370,9 @@
                 boton.addEventListener('click', cambiarNumeroPartidos)
 
                 function cambiarNumeroPartidos(e){
-                    let numeroPartidosNuevo = formulario.querySelector('#cantidadPartidosNueva').value;
+                    let numeroPartidosNuevo = formulario.querySelector('#cantidadTemporadasNueva').value;
                     nuevosPartidos.innerHTML = `
-                    ${numeroPartidosNuevo} amarillas
+                    ${numeroPartidosNuevo} temporadas
                     `
                 }
 
