--- a/equipos/lasPalmas/partidosJugados.html
+++ b/equipos/lasPalmas/partidosJugados.html
@@ -69,7 +69,7 @@
 
                 <h2>Álvaro Valles</h2>
                 <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/aaronEscandell.png">
@@ -77,7 +77,7 @@
 
                 <h2>Aarón Escandell</h2>
                 <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -95,7 +95,7 @@
 
                 <h2>Marvin Park</h2>
                 <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/sergiCardona.png">
@@ -103,7 +103,7 @@
 
                 <h2>Sergi Cardona</h2>
                 <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/alexSuarez.png">
@@ -111,7 +111,7 @@
 
                 <h2>Álex Suarez</h2>
                 <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -126,7 +126,7 @@
 
                 <h2>Eric Curbelo</h2>
                 <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/alvaroLemos.png">
@@ -134,7 +134,7 @@
 
                 <h2>Álvaro Lemos</h2>
                 <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/mikaMarmol.png">
@@ -142,7 +142,7 @@
 
                 <h2>Mika Mármol</h2>
                 <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -152,7 +152,7 @@
 
                 <h2>Daley Sinkgraven</h2>
                 <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -162,7 +162,7 @@
 
                 <h2>Saúl Coco</h2>
                 <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -173,7 +173,7 @@
 
                 <h2>Julián Araujo</h2>
                 <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -192,7 +192,7 @@
 
                 <h2>Javi Muñóz</h2>
                 <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/albertoMoleiro.png">
@@ -200,7 +200,7 @@
 
                 <h2>Albeto Moleiro</h2>
                 <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/benitoRamirez.png">
@@ -208,7 +208,7 @@
 
                 <h2>Benito Ramírez</h2>
                 <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -223,7 +223,7 @@
 
                 <h2>Enzo Loiodice</h2>
                 <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/kirianRodriguez.png">
@@ -231,7 +231,7 @@
 
                 <h2>Kirian Rodríguez</h2>
                 <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/omenukeMfulu.png">
@@ -239,7 +239,7 @@
 
                 <h2>Omenuke Mfulu</h2>
                 <h5>Mediocentro defensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/pejiño.png">
@@ -247,7 +247,7 @@
 
                 <h2>Pejiño</h2>
                 <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -256,7 +256,7 @@
 
                 <h2>Fabio González</h2>
                 <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -277,7 +277,7 @@
 
                 <h2>Cristian Herrera</h2>
                 <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/sandroRamirez.png">
@@ -285,7 +285,7 @@
 
                 <h2>Sandro Ramírez</h2>
                 <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/munirElHaddadi.png">
@@ -293,7 +293,7 @@
 
                 <h2>Munir El Haddadi</h2>
                 <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -308,7 +308,7 @@
 
                 <h2>Marc Cardona</h2>
                 <h5>Delantero Centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos jugados</button>
+                <button class="btn btn-secondary bg-primary cambiarPartidosJugados">Cambiar partidos</button>
             </div><!-- /.col-lg-4 -->
 
             
@@ -362,7 +362,7 @@
         <label for="posicionJugador" class="form-label">Escribe la cantidad de partidos jugados</label>
         <input type="text" class="form-control mb-3" id="cantidadPartidosNueva" style="width: 250px;" required>
 
-        <button type="submit" class="btn btn-primary">Cambiar partidos jugados</button>
+        <button type="submit" class="btn btn-primary">Cambiar partidos</button>
         `;
 
                 formulario.appendChild(divContenido);
@@ -375,7 +375,7 @@
                 function cambiarNumeroPartidos(e){
                     let numeroPartidosNuevo = formulario.querySelector('#cantidadPartidosNueva').value;
                     nuevosPartidos.innerHTML = `
-                    ${numeroPartidosNuevo} partidos jugados
+                    ${numeroPartidosNuevo} partidos
                     `
                 }
 
